--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@
     /* display: none; */
     z-index: 3;
     width: 100%;
-    height: 80vh;
+    padding:3rem 0;
     background-color: #01265B;
     position:absolute;
     
