--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/* color
+  #13c7e6
+  #01265B
+*/
+
+
+
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@400&display=swap');
 
 
@@ -70,11 +80,11 @@
   
   transition: font-size 0.3s;
 }
-.nav_super {
+/* .nav_super {
   border:none !important;
-}
+} */
 
-.nav > li > a:hover {
+.nav > li > a:hover ,.sub-menu ul li a {
   /* font-size: 18px; */
   color: #13c7e6;
 }
@@ -99,7 +109,7 @@
 .sub_menu ul li a {
   background: transparent ;
   padding: 10px;
-  border-bottom: 1px solid #fff;
+  /* border-bottom: 1px solid #fff; */
   font-size: 1rem;
   font-weight: 500;
   text-decoration: none;
@@ -151,7 +161,7 @@
     display: block;
     z-index: 5;
     
-    border: 2px solid #fff;
+
 
   }
   .nav{
@@ -202,9 +212,10 @@
     position: absolute;
     top: 12vh;
     left:65vw; 
+    border: 1px solid #fff;
   }
   .sub_menu ul li a{
-    border: none;
+    font-size: 3vw;
   }
 }
 
@@ -340,7 +351,7 @@
 
 .container_partners {
 	padding: 5vh 0;
-  /* min-height:50vh ; */
+  min-height:50vh ;
   align-items: center;
 	background: #01265B;
 	display: flex;
@@ -350,7 +361,7 @@
 }
 .partners_text h1{
   color: white;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 500;
   
 }
@@ -436,6 +447,9 @@
   .slider .slide-track {
     
     --slide_img_width: 110px;
+  }
+  .container_partners{
+    min-height:30vh;
   }
 }
 
@@ -568,6 +582,22 @@
   /* letter-spacing: 2px;
   line-height: 1.2rem; */
 }
+.sec_link{
+  text-align: end;
+}
+.sec_text a{
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+  padding-bottom: 30px;
+  line-height: 1.58;
+  letter-spacing: .1vw;
+  color: #01265B;
+  transition: color .3s;
+}
+.sec_text a:hover{
+  color: #13c7e6;
+}
 @media(max-width:780px){
   .sec_text h2{
     font-size: 2rem;
@@ -602,6 +632,227 @@
   }
 }
 
+/* ======================================
+
+            COURSES
+
+==========================================*/
+
+
+.courses {
+  background-color: #01265B;
+  /* background-image: url(./Images/Background/stars.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; */
+  width: 100vw;
+  padding: 2rem 0rem;
+}
+
+.courses h1 {
+  text-align: center;
+  
+  color: #fff;
+  font-size: 4rem;
+  font-weight: 500;
+  /* margin-bottom: 3rem; */
+}
+
+.courses_content {
+  
+  padding: 1vw;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* position: relative; */
+}
+
+
+.courses_list {
+  /* position:absolute; */
+  /* border-radius: 25px; */
+  /* border: 1px solid tomato; */
+  list-style: none;
+  
+  /* margin-left: 1.5rem; */
+  /* padding: .5rem; */
+  width: 23vw;
+  /* background-color: blue; */
+ 
+}
+
+.courses_list li {
+  /* border-radius: 25px; */
+  font-weight: 500;
+  font-size: 1.2vw;
+  padding: 1rem;
+  color: #fff;
+  /* border-bottom: 1px  tomato; */
+  cursor: pointer;
+  transition: color  .5s ease;
+  transition: font-weight .5s ease;
+}
+
+.courses_list .active{
+  color: #13c7e6;
+  font-weight: 700;
+  border-right: 5px solid #13c7e6;
+}
+
+.description {
+  /* background-color: black; */
+  border-left: 1px solid #f2f2f2;
+  height: 70vh;
+  width: 60vw;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  margin-top: 3vh ;
+  color: #f9f9f9;
+  /* border: 2px solid tomato; */
+  /* border-radius: 25px; */
+  
+}
+
+
+
+.description h2 {
+
+  color: #13c7e6;
+  /* text-align: center; */
+  padding-left: 1.5rem;
+  /* color: tomato; */
+  font-size: 2.4vw;
+  font-weight: 600;
+}
+
+.description p {
+  /* font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.58;
+  letter-spacing: .1vw; */
+  
+  padding: 1.5rem;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  font-weight: 500;
+  font-size: 1.2vw;
+}
+
+.description h3 {
+  color: #13c7e6;
+  padding-left: 1.5rem;
+  font-size:1.5vw ;
+  font-weight: 600;
+}
+
+.course_benefits {
+  padding: .5rem 3rem;
+  line-height: 1.5;
+  font-weight: 500;
+  font-size: 1.2vw;
+}
+
+.description a {
+  text-align: end;
+  padding-right: 4vw;
+
+}
+
+.description a button {
+  border: none;
+  padding: 1vw 2vw;
+  border-radius: 60px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color: #13c7e6;
+}
+
+.description button:hover {
+  background-color: #B9E9FC;
+  cursor: pointer;
+}
+
+.course_soon {
+  text-align: center;
+}
+.course_soon button {
+  border: none;
+  /* border: 5px solid #13c7e6; */
+  border-radius: 60px;
+  background-color: #13c7e6;
+  padding: .8rem 2.4rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #01265B;
+  /* box-shadow: 20px 20px 20px 0px RGBA(19, 199, 230, .5); */
+  transition: background-color .3s ;
+}
+.course_soon button:hover {
+  background-color: #B9E9FC;
+}
+@media(max-width: 720px){
+  .courses_content{
+    flex-direction: column;
+  }
+  .courses_list{
+    padding: 3vh 0;
+    border-right: 1px solid #f2f2f2;
+    min-width:60vw;
+  }
+  .courses_list li {
+    font-size: .7rem;
+    padding: 1vh .5vw;
+  }
+
+  .description{
+    border: none;
+    margin: 0;
+    padding: 2vh 0;
+    min-width: 100vw;
+    height: auto;
+  }
+  .description h2{
+    font-size: 1rem;
+  }
+  .description p{
+    font-size: .5rem;
+    
+    line-height: 1.2;
+  }
+  .description h3 {
+    
+    font-size: .7rem;
+  }
+  .course_benefits{
+    font-size: .5rem;
+  }
+  
+}
+@media(max-width:580px){
+  .courses h1{
+    margin-bottom: 1rem;
+    font-size: 9vw;
+    font-weight: 700;
+  }
+  .description a button {
+    font-size: 3vw;
+  }
+  .description p{
+    font-weight: 500;
+    font-size: 3vw;
+  }
+  .course_benefits{
+    font-weight: 500;
+    font-size: 3vw;
+  }
+  
+}
+
 
 
 
@@ -620,7 +871,7 @@
   background-attachment: fixed;
   color:#f2f2f2; */
   
-  padding-bottom: 2rem;
+  padding: 2rem 0;
 }
 .features h2 {
   text-align: center;
@@ -829,214 +1080,6 @@ ol li .descr { font-size: 0.8rem; font-weight: 300 }
   font-size: 56px;
 } */
 
-
-/* ======================================
-
-            COURSES
-
-==========================================*/
-
-
-.courses {
-  /* background-image: url(./Images/Background/stars.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; */
-  width: 100vw;
-  padding: 2rem 0rem;
-}
-
-.courses h1 {
-  text-align: center;
-  
-  color: #000;
-  font-size: 4rem;
-  font-weight: 600;
-  /* margin-bottom: 3rem; */
-}
-
-.courses_content {
-  padding: 1vw;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* position: relative; */
-}
-
-
-.courses_list {
-  /* position:absolute; */
-  border-radius: 25px;
-  /* border: 1px solid tomato; */
-  list-style: none;
-  /* margin-left: 1.5rem; */
-  padding: .5rem;
-  width: 23vw;
-  background-color: #01265B;
-}
-
-.courses_list li {
-  border-radius: 25px;
-  font-weight: 500;
-  font-size: 1.2vw;
-
-  padding: 1rem;
-  color: #fff;
-  border-bottom: 1px  tomato;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.courses_list li:hover {
-  background-color: #13c7e6;
-}
-
-.description {
-  background-color: #01265B;
-  height: 80vh;
-  width: 60vw;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 2vw;
-  padding: 4vw 1vw;
-  color: #f9f9f9;
-  /* border: 2px solid tomato; */
-  border-radius: 25px;
-}
-
-
-
-.description h2 {
-
-  color: #13c7e6;
-  text-align: center;
-  /* color: tomato; */
-  font-size: 2.4vw;
-  font-weight: 600;
-}
-
-.description p {
-  /* font-weight: 600;
-  font-size: 1rem;
-  line-height: 1.58;
-  letter-spacing: .1vw; */
-  
-  padding: 1.5rem;
-  letter-spacing: 1px;
-  line-height: 1.5;
-  font-weight: 600;
-  font-size: 1.2vw;
-}
-
-.description h3 {
-  color: #13c7e6;
-  padding-left: 1.5rem;
-  font-size:1.5vw ;
-  font-weight: 600;
-}
-
-.course_benefits {
-  padding: .5rem 3rem;
-  line-height: 1.5;
-  font-weight: 400;
-  font-size: 1.2vw;
-}
-
-.description a {
-  text-align: end;
-  padding-right: 4vw;
-
-}
-
-.description a button {
-  border: none;
-  padding: 1vw 2vw;
-  border-radius: 60px;
-  font-size: 1.2rem;
-  font-weight: 600;
-  background-color: #13c7e6;
-}
-
-.description button:hover {
-  background-color: #B9E9FC;
-  cursor: pointer;
-}
-
-.course_soon {
-  text-align: center;
-}
-.course_soon button {
-  border: none;
-  /* border: 5px solid #13c7e6; */
-  border-radius: 60px;
-  background-color: #13c7e6;
-  padding: .8rem 2.4rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: #01265B;
-  /* box-shadow: 20px 20px 20px 0px RGBA(19, 199, 230, .5); */
-  transition: background-color .3s ;
-}
-.course_soon button:hover {
-  background-color: #B9E9FC;
-}
-@media(max-width: 720px){
-  .courses_content{
-    flex-direction: column;
-  }
-  .courses_list{
-    width: auto;
-  }
-  .courses_list li {
-    font-size: .7rem;
-    padding: 1vh .5vw;
-  }
-
-  .description{
-    
-    min-width: 90vw;
-    height: auto;
-  }
-  .description h2{
-    font-size: 1rem;
-  }
-  .description p{
-    font-size: .5rem;
-    
-    line-height: 1.2;
-  }
-  .description h3 {
-    
-    font-size: .7rem;
-  }
-  .course_benefits{
-    font-size: .5rem;
-  }
-  
-}
-@media(max-width:580px){
-  .courses h1{
-    margin-bottom: 1rem;
-    font-size: 9vw;
-    font-weight: 700;
-  }
-  .description a button {
-    font-size: 3vw;
-  }
-  .description p{
-    font-weight: 500;
-    font-size: 3vw;
-  }
-  .course_benefits{
-    font-weight: 500;
-    font-size: 3vw;
-  }
-  
-}
 
 
 /* .four{
@@ -1327,24 +1370,394 @@ figure:hover img {
 
 /* --------------------------- */
 
+/* =================================
 
+            Testimonial
+            
+  ====================================*/
+  .testimonials{
+    margin-bottom: 5rem;
+  }
+  .testi_flex{
+    display: flex;
+    position: relative;
+    align-items: center;
+  }
+  .testi_box{
+    width: 70vw;
+    height: 25rem;
+    background-color: #01265B;
+  }
+  .testi_box h3 {
+    width: 50vw;
+    color: #fff;
+    font-weight: 500;
+    font-size: 3rem;
+    padding-top: 10rem;
+    padding-left: 4vw;
+  }
+  .testi_box p{
+    color: #fff;
+    padding-left: 4.5vw;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.58;
+    letter-spacing: .1vw;
+  }
+  .testi_container{
+  
+  position: absolute;
+  right: 0;
+  
 
+}
 
-
-
-
-
-
-
-/* ------- Styling for Footer -------*/
-
-
-.footer {
-  background-color: #01265B;
-  width: 100%;
+.testi_slider {
+  background-color: #fff;
+  /* border-radius: 25px; */
+  box-shadow: 3px 4px 8px 0 rgba(0,0,0, 0.4);
+  /* border: 5px solid #000; */
+  height: 200px;
   overflow: hidden;
-  /* height: 400px; */
-  display: flex;
+  padding: 1rem;
+  margin-right: 10vw;
+  position: relative;
+  width: 600px;
+}
+
+.testi_slider li {
+  float: left;
+  position: relative;
+  width: 600px;
+  display: block;
+  min-height: 6rem;
+}
+
+.testi_slider ul {
+  list-style: none;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  /* background-color: aqua; */
+  width: 6000px;
+  transition: left .2s linear;
+  -moz-transition: left .2s linear;
+  -o-transition: left .2s linear;
+  -webkit-transition: left .2s linear;
+  /* margin-left: -25px; */
+  /* font-family: open sans; */
+  color: #666;
+}
+
+/*** Content ***/
+
+.testi_content {
+  color: #000;
+  margin: 0 auto;
+  padding: 0;
+  width: 600px;
+  min-height: 180px;
+    display: flex;
+    align-items: center;
+    
+    
+  }
+  
+  /* .testi_content h2 {
+    color: #fff;
+  } */
+  
+  .testi_content p {
+    text-align: center;
+    margin: 25px;
+    font-weight: 400;
+    line-height: 1.5;
+  }
+  .testi_content p span {
+    font-weight: 600;
+  }
+  
+  /*** target hooks ****/
+  
+  @keyframes slide-animation {
+    0% {opacity: 0;}
+    
+    2% {
+      opacity: 1;
+    }
+    
+    20% {
+      left: 0px;
+      opacity: 1;
+    }
+    
+    22.5% {
+      opacity: 0.6;
+    }
+    
+    40% {
+      left: -600px;
+      opacity: 1;
+    }
+    
+    45% {
+      left: -600px;
+      opacity: 1;
+    }
+    
+    42.5% {
+      opacity: 0.6;
+    }
+    
+    60% {
+      /* left: -1200px; */
+      left: -1200px;
+      opacity: 1;
+    }
+    
+    70% {
+      left: -1200px;
+      opacity: 1;
+    }
+    
+    62.5% {
+      opacity: 0.6;
+    }
+    
+    80% {
+      left: -1800px;
+      opacity: 1;
+    }
+    
+    95% {
+      opacity: 1;
+    }
+    
+    98% {
+      left: -1800px;
+      opacity: 0;
+    }
+    
+    100% {
+      left: 0px;
+      opacity: 0;
+    }
+  }
+  
+  .testi_slider ul {
+    animation: slide-animation 20s infinite;
+  }
+  
+  .testi_slider ul:hover {
+    animation-play-state: paused;
+    /* -webkit-animation-play-state: paused; */
+  }
+  @media(max-width:1200px){
+    .testi_slider{
+      margin-right: 5vw;
+    }
+    .testi_box h3, .testi_box p{
+      padding-left: 2vw;
+    }
+  }
+  @media(max-width:1100px){
+    .testi_slider{
+      width: 400px;
+    }
+    .testi_slider li {
+      width: 400px;
+    }
+    .testi_content {
+      width: 400px;
+    }
+    @keyframes slide-animation {
+      0% {opacity: 0;}
+      
+      2% {
+        opacity: 1;
+      }
+      
+      20% {
+        left: 0px;
+        opacity: 1;
+      }
+      
+      22.5% {
+        opacity: 0.6;
+      }
+      
+      40% {
+        left: -400px;
+        opacity: 1;
+      }
+      
+      45% {
+        left: -400px;
+        opacity: 1;
+      }
+      
+      42.5% {
+        opacity: 0.6;
+      }
+      
+      60% {
+        /* left: -1200px; */
+        left: -800px;
+        opacity: 1;
+      }
+      
+      70% {
+        left: -800px;
+        opacity: 1;
+      }
+      
+      62.5% {
+        opacity: 0.6;
+      }
+      
+      80% {
+        left: -1200px;
+        opacity: 1;
+      }
+      
+      95% {
+        opacity: 1;
+      }
+      
+      98% {
+        left: -1200px;
+        opacity: 0;
+      }
+      
+      100% {
+        left: 0px;
+        opacity: 0;
+      }
+    }
+  }
+  @media(max-width:725px){
+    .testi_flex{
+      flex-direction: column;
+      justify-content: center;
+    }
+    .testi_box{
+      width: 100vw;
+      text-align: center;
+    }
+    .testi_box h3 {
+      width: auto;
+
+      font-weight: 700;
+      font-size: 7vw;
+      padding-top: 1rem;
+      padding-left: 4vw;
+    }
+    .testi_box p{
+      color: #fff;
+      padding-left: 4.5vw;
+      font-weight: 400;
+      font-size: .8rem;
+      line-height: 1.58;
+      letter-spacing: .1vw;
+    }
+    .testi_container{
+      align-self: center;
+      right: auto;
+    }
+
+    .testi_slider{
+      height:230px;
+      width: 300px;
+      margin: auto;
+    }
+    .testi_slider li {
+      width: 300px;
+    }
+    .testi_content {
+      width: 300px;
+    }
+    @keyframes slide-animation {
+      0% {opacity: 0;}
+      
+      2% {
+        opacity: 1;
+      }
+      
+      20% {
+        left: 0px;
+        opacity: 1;
+      }
+      
+      22.5% {
+        opacity: 0.6;
+      }
+      
+      40% {
+        left: -300px;
+        opacity: 1;
+      }
+      
+      45% {
+        left: -300px;
+        opacity: 1;
+      }
+      
+      42.5% {
+        opacity: 0.6;
+      }
+      
+      60% {
+        /* left: -1200px; */
+        left: -600px;
+        opacity: 1;
+      }
+      
+      70% {
+        left: -600px;
+        opacity: 1;
+      }
+      
+      62.5% {
+        opacity: 0.6;
+      }
+      
+      80% {
+        left: -900px;
+        opacity: 1;
+      }
+      
+      95% {
+        opacity: 1;
+      }
+      
+      98% {
+        left: -900px;
+        opacity: 0;
+      }
+      
+      100% {
+        left: 0px;
+        opacity: 0;
+      }
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  /* ------- Styling for Footer -------*/
+  
+  
+  .footer {
+    background-color: #01265B;
+    width: 100%;
+    overflow: hidden;
+    /* height: 400px; */
+    display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
@@ -1352,7 +1765,6 @@ figure:hover img {
 
 }
 
-.quick,
 .ai,
 .contact,
 .project {
@@ -1379,7 +1791,7 @@ figure:hover img {
   /* justify-content: space-between; */
 }
 
-.quick {
+/* .quick {
   padding-left: 2%;
 
 }
@@ -1394,10 +1806,9 @@ figure:hover img {
 .quick ul li a {
   text-decoration: none;
   color: #fff;
-  /* font-weight: 400; */
   font-size: .8rem;
 
-}
+} */
 
 .footer h3 {
   font-size: 1.4rem;
